Reliant Sales - Adjustment of status codes for error scenarios

--- a/src/main/resources/messages/message_resources_en_US.properties
+++ b/src/main/resources/messages/message_resources_en_US.properties
@@ -84,6 +84,7 @@ text.reason.for.fraud.credit.check=We have been notified of a security alert by 
 ######################################################### SALES APIs - START ##################################################
 ###############################################################################################################################
 msg_posid_hold = TBD
+msg_prospect_match_not_found = TBD
 ###############################################################################################################################
 ######################################################### SALES APIs - END ####################################################
 ###############################################################################################################################
