--- a/src/main/resources/messages/message_resources_es_US.properties
+++ b/src/main/resources/messages/message_resources_es_US.properties
@@ -82,6 +82,7 @@ text.reason.for.fraud.credit.check=Hemos sido notificados de una alerta de segur
 ######################################################### SALES APIs - START ##################################################
 ###############################################################################################################################
 msg_posid_hold = TBD
+msg_prospect_match_not_found = TBD
 ###############################################################################################################################
 ######################################################### SALES APIs - END ####################################################
 ###############################################################################################################################
