Reliant Sales - Skip Credit Check for Prospect Id

--- a/src/main/resources/messages/message_resources_es_US.properties
+++ b/src/main/resources/messages/message_resources_es_US.properties
@@ -83,6 +83,7 @@ text.reason.for.fraud.credit.check=Hemos sido notificados de una alerta de segur
 ###############################################################################################################################
 msg_posid_hold = TBD
 msg_prospect_match_not_found = TBD
+msg_prospect_mismatch=TBD
 ###############################################################################################################################
 ######################################################### SALES APIs - END ####################################################
 ###############################################################################################################################
