--- a/src/main/resources/messages/message_resources_en_US.properties
+++ b/src/main/resources/messages/message_resources_en_US.properties
@@ -85,6 +85,7 @@ text.reason.for.fraud.credit.check=We have been notified of a security alert by 
 ###############################################################################################################################
 msg_posid_hold = TBD
 msg_prospect_match_not_found = TBD
+msg_prospect_mismatch=TBD
 ###############################################################################################################################
 ######################################################### SALES APIs - END ####################################################
 ###############################################################################################################################
