OE:SPrint 9 : 28208 :MVP BP Match and POSID Hold Handling

--- a/src/main/resources/messages/message_resources_es_US.properties
+++ b/src/main/resources/messages/message_resources_es_US.properties
@@ -83,6 +83,8 @@ text.reason.for.fraud.credit.check=Hemos sido notificados de una alerta de segur
 ###############################################################################################################################
 msg_posid_hold = {0} could not confirm your identity with the information that was provided. After you complete your enrollment, we will require you to provide a valid for of identification before your service can start. Valid forms of ID include: <br/><ul><li>Social Security Card</li><li>Current/Valid Drivers license (Texas or out-of-state)</li><li>Current/Valid ID card (Texas or out-of-state)</li><li>Military or Government ID card</li><li>Valid Passport</li><li>Department of Correction ID card</li><li>Alien registration card</li><li>Consular ID card (matrícula consular)</li></ul>
 msg_prospect_match_not_found = Could not validate the prospect ID that was provided. Please try another prospect ID or remove the current prospect ID to continue.
+msg_posid_pastdue = TBD
+msg_posid_past_history = TBD
 ###############################################################################################################################
 ######################################################### SALES APIs - END ####################################################
 ###############################################################################################################################
