--- a/src/main/resources/messages/message_resources_es_US.properties
+++ b/src/main/resources/messages/message_resources_es_US.properties
@@ -73,10 +73,13 @@ text.reason.for.fraud.credit.check=Hemos sido notificados de una alerta de segur
 0271.esid.restriction.text.message=GME is unable to process your enrollment at this time. To set up service with GME please call 1-866-301-3120
 0391.esid.restriction.text.message=Discount Power is unable to process your enrollment at this time. To set up service with Discount Power please call 1-877-455-4674
 0391.CE.esid.restriction.text.message= Cirro is unable to process your enrollment at this time. To set up service with Cirro please call 1-800-692-4776
+0315.esid.restriction.text.message=
+
 0121.bp.restriction.text.message=Reliant is unable to process your enrollment at this time. To set up service with Reliant please call 1-866-222-7100
 0271.bp.restriction.text.message=GME is unable to process your enrollment at this time. To set up service with GME please call 1-866-301-3120
 0391.bp.restriction.text.message=Discount Power is unable to process your enrollment at this time. To set up service with Discount Power please call 1-877-455-4674
 0391.CE.bp.restriction.text.message= Cirro is unable to process your enrollment at this time. To set up service with Cirro please call 1-800-692-4776
+0315.bp.restriction.text.message=
 
 ###############################################################################################################################
 ######################################################### SALES APIs - START ##################################################
